--- a/.github/workflows/gempush.yml
+++ b/.github/workflows/gempush.yml
@@ -1,9 +1,11 @@
 name: Ruby Gem
 
-on:
-  push:
-    tags:
-      - '*'
+#on:
+#  push:
+#    tags:
+#      - '*'
+
+on: workflow_dispatch
 
 jobs:
   build:
